Test Data/WSN/WSN-MELA-4/outputs/wsn-scso/2025-07-18_09-20-18/problem_iter2_stdout_7_cand1.txt
Traceback (most recent call last):
  File "C:\Users\22973\Desktop\meevo-main\meevo/evaluators/wsn/main.py", line 7, in <module>
    import gpt  # 自定义的启发式模块
    ^^^^^^^^^^
  File "C:\Users\22973\Desktop\meevo-main\meevo\evaluators\wsn\gpt.py", line 21
    sigma = (np.math.gamma(1.5)*np.sin(np.pi*1.5/2)/(np.math.gamma((1.5+1)/2)*1.5*(2**((1.5-1)/2)))**(1/1.5)
            ^
SyntaxError: '(' was never closed
